--- a/pixi.toml
+++ b/pixi.toml
@@ -13,3 +13,5 @@ dagster-webserver = ">=1.10.19,<2"
 duckdb = ">=1.3.0,<2"
 dagster-duckdb = ">=1!0.26.19,<1!0.27"
 pip = ">=25.1.1,<26"
+dagster-duckdb-pandas = ">=1!0.26.19,<1!0.27"
+bactopia = ">=3.2.0,<4"
