updated readme, started work with sensor but commented for now, added a report as well

--- a/pixi.toml
+++ b/pixi.toml
@@ -15,3 +15,4 @@ dagster-duckdb = ">=1!0.26.19,<1!0.27"
 pip = ">=25.1.1,<26"
 dagster-duckdb-pandas = ">=1!0.26.19,<1!0.27"
 bactopia = ">=3.2.0,<4"
+matplotlib = ">=3.10.3,<4"
