--- a/pixi.toml
+++ b/pixi.toml
@@ -6,6 +6,13 @@ platforms = ["osx-arm64"]
 version = "0.1.0"
 
 [tasks]
+lint = "ruff check ."
+format = "ruff format ."
+format-check = "ruff format --check ."
+type-check = "mypy ubio_autobox"
+test = "pytest ubio_autobox_tests/ -v"
+test-cov = "pytest ubio_autobox_tests/ -v --cov=ubio_autobox --cov-report=term-missing"
+dagster-dev = "dagster dev"
 
 [dependencies]
 dagster = ">=1.10.19,<2"
@@ -16,3 +23,8 @@ pip = ">=25.1.1,<26"
 dagster-duckdb-pandas = ">=1!0.26.19,<1!0.27"
 bactopia = ">=3.2.0,<4"
 matplotlib = ">=3.10.3,<4"
+# Development tools
+ruff = ">=0.1.0"
+mypy = ">=1.0.0"
+pytest = ">=7.0.0"
+pytest-cov = ">=4.0.0"
