--- a/ruff.toml
+++ b/ruff.toml
@@ -1,4 +1,3 @@
-[tool.ruff]
 target-version = "py39"
 line-length = 88
 select = [
@@ -16,14 +15,13 @@ ignore = [
     "C901",  # too complex
 ]
 
-[tool.ruff.per-file-ignores]
+[per-file-ignores]
 "__init__.py" = ["F401"]
 
-[tool.ruff.isort]
+[isort]
 known-first-party = ["ubio_autobox"]
 
-[tool.ruff.format]
+[format]
 quote-style = "double"
 indent-style = "space"
-skip-string-normalization = false
 line-ending = "auto"
